--- a/src/components/Ava.css
+++ b/src/components/Ava.css
@@ -3,6 +3,7 @@
   align-self: stretch;
   display: flex;
   justify-content: center;
+  position: relative;
 
   &__content {
     position: relative;
@@ -11,12 +12,7 @@
     height: 144px;
     width: 144px;
     border-radius: 50%;
-    background-image: conic-gradient(
-      from -135deg,
-      #33f7f7 5%,
-      #b7ff01,
-      #33f7f7 95%
-    );
+    background-size: cover;
 
     @keyframes ava-spin {
       to {
@@ -24,7 +20,7 @@
       }
     }
 
-    animation: ava-spin 2s linear infinite;
+    animation: ava-spin 1.5s linear infinite;
 
     &::before {
       content: "";
@@ -41,6 +37,9 @@
       }
     }
   }
+  &_empty &__ring {
+    visibility: hidden;
+  }
   &__picture {
     border: 0;
     width: 128px;
@@ -51,11 +50,68 @@
     right: 0;
     bottom: 0;
     margin: auto;
+    border-radius: 50%;
+    overflow: hidden;
+    transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+      outline: 0;
+    }
+
+    &:focus-visible {
+      transform: scale(0.98) rotate(3deg);
+    }
+  }
+  &_empty &__picture {
+    pointer-events: none;
   }
   &__media {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
+    border-radius: inherit;
     object-fit: cover;
+
+    &:is(video) {
+      display: none;
+    }
+  }
+  &_loaded &__media {
+    &:is(img) {
+      display: none;
+    }
+    &:is(video) {
+      display: block;
+    }
+  }
+  &__share {
+    position: absolute;
+    top: -4px;
+    right: -4px;
+    border: 0;
+    padding: 4px;
+    transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+      outline: 0;
+    }
+
+    &:hover,
+    &:focus-visible {
+      opacity: 0.5;
+    }
+  }
+  &__share-icon {
+    height: 22px;
+    color: #000000;
+
+    @mixin dark {
+      color: #ffffff;
+    }
+  }
+  &__stories {
+    display: contents;
   }
 }
