--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,11 +4,17 @@
   box-sizing: border-box;
 }
 
+:root {
+  --max-width: 370px;
+  --padding-x: 20px;
+}
+
 html {
   height: 100%;
   -webkit-font-smoothing: antialiased;
   color-scheme: light;
   -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   tab-size: 4;
 
   @mixin dark {
@@ -37,11 +43,6 @@ hr {
   border-top-width: 1px;
 }
 
-/* abbr:where([title]) {
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
-} */
-
 h1,
 h2,
 h3,
@@ -61,19 +62,6 @@ b,
 strong {
   font-weight: bolder;
 }
-
-/* code,
-kbd,
-samp,
-pre {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
-  font-size: 1em;
-}
-
-small {
-  font-size: 80%;
-} */
 
 sub,
 sup {
