--- a/src/components/Request.css
+++ b/src/components/Request.css
@@ -71,6 +71,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    pointer-events: none;
   }
   &__addon-icon {
     color: #788cab;
