--- a/src/components/lib/Stories.css
+++ b/src/components/lib/Stories.css
@@ -1,19 +1,30 @@
 .stories {
   background-color: #000000;
   color: #ffffff;
-  flex-grow: 1;
-  aspect-ratio: 0.58;
+  /* flex-grow: 1; */
+  /* aspect-ratio: 0.58; */
   align-self: center;
   max-width: 100vw;
   position: relative;
   isolation: isolate;
   user-select: none;
+  /* width: calc(var(--height) * 0.58px); */
+  width: calc(var(--height) * 0.58px);
+  height: calc(var(--height) * 1px);
 
   &__header {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
     padding: 16px 20px;
     isolation: isolate;
     z-index: 200;
+
+    @media (max-height: $height-bp) {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
 
     &::before {
       content: "";
@@ -73,6 +84,14 @@
     object-fit: cover;
     margin-right: 12px;
   }
+  &__info {
+    display: flex;
+    align-items: center;
+    gap: 0 12px;
+    flex-wrap: wrap;
+    line-height: 1.3;
+    white-space: nowrap;
+  }
   &__username {
     font-weight: 500;
     font-size: 14px;
@@ -80,14 +99,14 @@
   &__time {
     font-size: 14px;
     color: rgba(255, 255, 255, 0.64);
-    margin-left: 12px;
   }
   &__close {
     z-index: 10;
     border-radius: 4px;
-    padding: 5px;
-    margin: -5px;
+    padding: 9px;
+    margin: -9px;
     border: 0;
+    border-radius: 4px;
     transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus {
@@ -111,5 +130,21 @@
     right: 0;
     bottom: 0;
     z-index: 100;
+    touch-action: none;
+  }
+  /* &__left,
+  &__right {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 100;
+    touch-action: none;
+    width: 50%;
+  } */
+  &__left {
+    left: 0;
+  }
+  &__right {
+    right: 0;
   }
 }
