--- a/src/components/Ava.css
+++ b/src/components/Ava.css
@@ -52,6 +52,7 @@
     margin: auto;
     border-radius: 50%;
     overflow: hidden;
+    /* touch-action: none; */
     transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:focus {
@@ -60,6 +61,18 @@
 
     &:focus-visible {
       transform: scale(0.98) rotate(3deg);
+    }
+
+    #videoEl {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: inherit;
+      object-fit: cover;
+      opacity: 0;
+      visibility: hidden;
     }
   }
   &_empty &__picture {
@@ -73,6 +86,7 @@
     height: 100%;
     border-radius: inherit;
     object-fit: cover;
+    /* pointer-events: none; */
 
     &:is(video) {
       display: none;
