--- a/src/components/lib/Story.css
+++ b/src/components/lib/Story.css
@@ -3,12 +3,15 @@
 
   img,
   video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
+    /* height: 100%; */
+    /* width: 100%; */
     object-fit: cover;
+    width: calc(var(--height) * 0.58px);
+    height: calc(var(--height) * 1px);
+    max-width: 100vw;
   }
 
   &__spinner {
@@ -39,6 +42,17 @@
     border-radius: 12px;
     transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: opacity;
+    line-height: 1.3;
+
+    @media (max-height: $height-bp) {
+      font-size: 14px;
+      min-height: 40px;
+      padding-left: 16px;
+      padding-right: 16px;
+      left: 16px;
+      right: 16px;
+      bottom: 16px;
+    }
 
     &:focus {
       outline: 0;
@@ -52,6 +66,10 @@
     svg {
       height: 20px;
       margin-left: 16px;
+
+      @media (max-height: $height-bp) {
+        display: none;
+      }
     }
   }
 }
