--- a/src/components/lib/Story.css
+++ b/src/components/lib/Story.css
@@ -12,6 +12,7 @@
     width: calc(var(--height) * 0.58px);
     height: calc(var(--height) * 1px);
     max-width: 100vw;
+    pointer-events: none;
   }
 
   &__spinner {
