--- a/src/components/lib/Story.css
+++ b/src/components/lib/Story.css
@@ -26,7 +26,7 @@
   &__button {
     position: absolute;
     left: 20px;
-    right: 20px;
+    width: calc(100% - 40px);
     bottom: 20px;
     z-index: 200;
     font-weight: 600;
